# meshy-youtube-mcp

./: .env.example  .gitignore  BCOS.md  LICENSE  README.md  llms.txt  pyproject.toml  requirements.txt
meshy_youtube/: __init__.py  authorize.py  meshy.py  server.py  turntable.py  video.py  youtube.py
tests/: test_offline.py
